2009-07-31  Sanel <karijes@users.sourceforge.net>

	* edelib/EdbusConnection.h: completed documentation
	* doc/todo.dox: removed one TODO

2009-07-21  Sanel <karijes@users.sourceforge.net>

	* src/FontChooser.cpp: cosmetic changes
	* doc/Doxyfile.in: examples directory is part of EXAMPLES_PATH
	* edelib/edelib-global.h: added EDELIB_NS_USING_AS() and documented the
	rest macros
	* examples/menu.cpp: addopted to use EDELIB_NS_* macros

2009-06-09  Sanel <karijes@users.sourceforge.net>

	* src/IconLoader.cpp: lookup cache not only by icon name, but by size too;
	this prevent issue where seen icon name (with random size) would be
	returned for different requested sizes

2009-06-08  Sanel <karijes@users.sourceforge.net>

	* edelib/TempFile.h:
	* src/TempFile.cpp:
	* test/temp_file.cpp: added class for unique temporary files
	* edelib/TempFile.h:
	* src/TempFile.cpp: added set_no_close() member; if set, destructor will
	not close descriptors

2009-06-07  Sanel <karijes@users.sourceforge.net>

	* src/MenuItem.cpp: some Sun Studio quirks

2009-06-06  Sanel <karijes@users.sourceforge.net>

	* src/MenuItem.cpp: better way to determine icon and label positions; also
	fixes issue when the label is too large so menu window could not correctly
	recalculate own width
	* examples/menu.cpp:
	* examples/menu.fl: extending examples for corner cases

2009-06-03  Sanel <karijes@users.sourceforge.net>

	* edelib/MenuItem.h:
	* src/MenuItem.cpp: changes to allow images in menu items
	* examples/menu.cpp: added some icons to test against
	* examples/menu.cpp: extended a little bit

2009-06-02  Sanel <karijes@users.sourceforge.net>

	* examples/Jamfile: let menu.cpp gets FLTK include paths during
	compilation

2009-06-30  Sanel <karijes@users.sourceforge.net>

	* Forking FLTK menu due it's inability to be extended; names are changed
	and edelib namespace is used
	* examples/menu.cpp: small demo
	* Jamrules: remove edelib-gui.pc when 'jam distclean' given
